- Added a wait_select() function which works very much like the
  bsdsocket.library/WaitSelect() function.

- Added <sys/time.h> include to <sys/socket.h> due to latest "TimeVal" change
  in the OS4 SDK. Otherwise "struct timeval" will not be defined at the time
  the <net/if.h> of the netincludes will be included by <proto/bsdsocket.h>.

- The strftime() hook function had the locale and character parameters
  switched, which made 'setlocale(LC_ALL,""); strftime(..);' unusable.
  Fixed.

- fchown() and chown() now accept owner and group ID values of -1, which
  indicate that the respective information should not be changed.

- The OS4 library build now includes the crtbegin.o and crtend.o object
  files in the libc.a library, which solves a problem with the thread-safe
  shared library support code.


c.lib 1.199 (6.3.2006)

- In <stdio.h> MAXPATHLEN is now equivalent to PATH_MAX (from <limits.h>),
  as suggested by Henning Nielsen Lund.

- Added lockf() support, as supplied by Henning Nielsen Lund.
  Thank you very much!

- symlink() now also works for absolute and relative links, and is
  part of "libunix.a". This patch was supplied by Henning Nielsen Lund.
  Thank you very much!

- The __main() stub function expected by the 68k GCC build is no
  longer part of "stdlib_main.c". This helps the C++ support, since the
  __main symbol definition no longer clashes with the definition in
  "libgcc.a".

- The printf() family stripped trailing zeroes from the integer part
  of %g output. Fixed.

- Moved an allocation size roundup operation in realloc().


c.lib 1.198 (11.12.2005)

- Added <fenv.h> for C99, and the (yet unimplemented) functions
  feclearexcept(), fegetenv(), fegetexceptflag(), fegetround(),
  feholdexcept(), feraiseexcept(), fesetenv(), fesetexceptflag(),
  fetestexcept(), fetestround() and feupdateenv().

- Replaced the old pow() implementation. However, powf() may need to
  be changed to set a domain error.
