@@ -44,6 +44,6 @@
 void
 __check_abort(void)
 {
-	if(__check_abort_enabled && FLAG_IS_SET(SetSignal(0,SIGBREAKF_CTRL_C),SIGBREAKF_CTRL_C))
+	if(__check_abort_enabled && FLAG_IS_SET(SetSignal(0,__break_signal_mask),__break_signal_mask))
 		raise(SIGINT);
 }
