@@ -315,6 +315,7 @@ SIGNAL_OBJ = \
 	signal_checkabort.o \
 	signal_data.o \
 	signal_kill.o \
+	signal_mask.o \
 	signal_raise.o \
 	signal_sigaddset.o \
 	signal_sigblock.o \
