@@ -224,7 +224,7 @@ SOCKET_CONSTRUCTOR(socket_init)
 	tags[1].ti_Tag = SBTM_SETVAL(SBTC_BREAKMASK);
 
 	if(__check_abort_enabled)
-		tags[1].ti_Data	= SIGBREAKF_CTRL_C;
+		tags[1].ti_Data	= __break_signal_mask;
 	else
 		tags[1].ti_Data	= 0;
 
