@@ -1,3 +1,8 @@
+- The default break signal mask (SIGBREAKF_CTRL_C) is no longer
+  hard-coded. You can override it at link time with a different
+  variable value for __break_signal_mask. This may have to be
+  augmented by an API for changing the value.
+
 - Added a wait_select() function which works very much like the
   bsdsocket.library/WaitSelect() function.
 
